<resources>
    <string name="app_name">FitFinder</string>

    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="enter_your_full_name">Enter your full name</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="create_password">Create password</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="let_s_help_you_meet_up_your_partners">Let\'s help you meet up your partners.</string>
    <string name="already_have_an_account">Already have an account? </string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="fitfinder">FitFinder</string>
    <string name="find_your_perfect_workout_partner">Find your perfect workout partner.</string>
    <string name="confirm_password">Confirm password</string>
    <string name="Don_t_have_an_account">Don\'t have an account? </string>
    <string name="forgot_password">Forgot password?</string>
    <string name="password">Password</string>
    <string name="example_gmail_com">example@gmail.com</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cancel">Cancel</string>
    <string name="reset">Reset</string>
    <string name="profile">Profile</string>
    <string name="messages">Messages</string>
    <string name="calendar">Calendar</string>
    <string name="search">Search</string>
    <string name="exercise">Exercise</string>
    <string name="exercises">Exercises</string>
    <string name="logout">Logout</string>
    <string name="relevant_information">Relevant Information</string>
    <string name="user_type">User Type</string>
    <string name="workout_times">Workout Times</string>
    <string name="sport_categories">Sport Categories</string>
    <string name="about_me">About Me</string>
    <string name="write_a_description_here">Write a description here…</string>
    <string name="save">Save</string>
    <string name="iv_add_description">iv_add_description</string>
    <string name="add_sport_category">Add Sport Category</string>
    <string name="select_sport_category">Select Sport Category</string>
    <string name="select_skill_level">Select Skill Level</string>
    <string name="add">Add</string>
    <string name="edit_picture"><u>Edit Picture</u></string>
    <string name="view_profile"><u>View Profile</u></string>
    <string name="additional_pictures">Additional Pictures</string>
    <string name="select_radius">Select Radius</string>
    <string name="select_workout_times">Select Workout Times</string>
    <string name="sport_category">Sport Category</string>
    <string name="skill_level">Skill Level</string>
    <string name="radius">Radius</string>
    <string name="type_a_message">Type a message</string>
    <string name="send">Send</string>
    <string name="partner">Partner</string>
    <string name="location">Location</string>
    <string name="additional_equipment">Additional Equipment \n(Only if needed)</string>

    <string name="create">Create</string>
    <string name="new_invites">New Invites</string>
    <string name="progress">Progress</string>
    <string name="unfilled_reports">Unfilled Reports</string>
    <string name="training_sessions">Training Sessions</string>
    <string name="new_invite_request">New invite request</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="fill_report">Fill Report</string>
    <string name="submit">Submit</string>


    <string-array name="radius_values">
        <item>10 km</item>
        <item>30 km</item>
        <item>50 km</item>
        <item>100 km</item>
        <item>More than 100 km</item>

    </string-array>

    <string-array name="training_session_filter">
        <item>History</item>
        <item>Future</item>
    </string-array>

</resources>