<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout     xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.SignupActivity"
    tools:layout_editor_absoluteY="25dp"
    android:backgroundTint="@color/background">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/auth_shape"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:id="@+id/signup_img_1" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_back"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:id="@+id/iv_back"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/signup_img_1"
        android:text="@string/register"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/poppinssemibold"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:id="@+id/signup_txt_1"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/signup_txt_1"
        android:text="@string/let_s_help_you_meet_up_your_partners"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/poppinsregular"
        android:textSize="12sp"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        android:id="@+id/signup_txt_2"/>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/signup_txt_2"
        android:padding="30dp"
        android:id="@+id/signup_ly_1">
        
        <EditText
            android:id="@+id/et_fullName"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:inputType="textPersonName"
            android:background="@drawable/btn_shape"
            android:hint="@string/enter_your_full_name"
            android:paddingStart="10dp"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/poppinsregular"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:background="@drawable/btn_shape"
            android:layout_marginTop="10dp"
            android:hint="@string/enter_your_email"
            android:paddingStart="10dp"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/poppinsregular"
            tools:ignore="RtlSymmetry" />

        <Button
            android:id="@+id/btn_date"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:background="@drawable/btn_shape"
            android:layout_marginTop="10dp"
            android:backgroundTint="#DFE3E6"
            android:text="@string/date_of_birth"
            android:fontFamily="@font/poppinsregular"
            android:textAllCaps="false"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="164dp" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:ems="10"
            android:inputType="textPassword"
            android:background="@drawable/btn_shape"
            android:layout_marginTop="10dp"
            android:hint="@string/create_password"
            android:paddingStart="10dp"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/poppinsregular"
            tools:ignore="RtlSymmetry" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/signup_ly_1"
        android:text="@string/register"
        android:textAllCaps="false"
        android:background="@drawable/btn_shape"
        android:width="300dp"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:fontFamily="@font/poppinsbold"
        tools:layout_editor_absoluteX="164dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/btn_register"
        android:gravity="center"
        android:layout_marginTop="20dp">
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_an_account"
            android:fontFamily="@font/poppinsregular"
            android:textSize="12sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:fontFamily="@font/poppinssemibold"
            android:textSize="12sp"
            android:textColor="@color/primaryColor"
            android:id="@+id/tv_login"/>
    </LinearLayout>


</RelativeLayout>