<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/dialogAddSportCategory"
    tools:context=".ui.profile.ProfileFragment"
    android:background="@android:color/transparent"
    android:layout_margin="20dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/dialogBox"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/dialog_border">

        <!-- Title TextView -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_addSportCategory"
            android:background="@drawable/dialog_fill"
            android:padding="10dp"
            android:text="@string/add_sport_category"
            android:textColor="@color/white"
            android:fontFamily="@font/poppinssemibold"
            android:textSize="17sp"
            app:layout_constraintTop_toTopOf="parent" />


        <!-- Sport Category Dropdown -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_sportCategory"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/select_sport_category"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_addSportCategory">

            <AutoCompleteTextView
                android:id="@+id/ac_sportCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:fontFamily="@font/poppinssemibold"
                tools:ignore="LabelFor" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Skill Level Dropdown -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_skillLevel"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/select_skill_level"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_sportCategory">

            <AutoCompleteTextView
                android:id="@+id/ac_skillLevel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:fontFamily="@font/poppinssemibold"
                tools:ignore="LabelFor" />
        </com.google.android.material.textfield.TextInputLayout>



        <!-- Cancel Button -->
        <Button
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:id="@+id/btn_cancel"
            android:layout_marginStart="40dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="10dp"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:text="@string/cancel"
            app:backgroundTint="@null"
            android:background="@drawable/btn_shape"
            android:fontFamily="@font/poppinsbold"
            app:cornerRadius="20dp"
            app:layout_constraintTop_toBottomOf="@id/layout_skillLevel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_add"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintBottom_toBottomOf="@id/dialogBox"
            tools:ignore="NotSibling" />

        <!-- Add Button -->
        <Button
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:id="@+id/btn_add"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="5dp"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:text="@string/add"
            app:backgroundTint="@null"
            android:background="@drawable/btn_shape"
            android:fontFamily="@font/poppinsbold"
            app:cornerRadius="20dp"
            app:layout_constraintTop_toBottomOf="@id/layout_skillLevel"
            app:layout_constraintStart_toEndOf="@id/btn_cancel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/dialogBox"
            tools:ignore="NotSibling" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
