<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragmentForgotPassword"
    tools:context=".ui.auth.ForgotPasswordFragment"
    android:background="@android:color/transparent"
    android:layout_margin="20dp">
    
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/dialogBox"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/auth_forgotpassword_border">
        
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_forgotPassword"
            android:background="@drawable/auth_forgotpassword_fill"
            android:padding="10dp"
            android:text="@string/forgot_password"
            android:textColor="@color/white"
            android:fontFamily="@font/poppinssemibold"
            android:textSize="17sp"
            android:drawablePadding="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:drawableLeftCompat="@drawable/ic_forgotpassword" />
        
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_description"
            android:text="@string/enter_your_email"
            android:textSize="16sp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/poppinssemibold"
            android:textColor="@color/secondaryColor"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/tv_forgotPassword"
            app:layout_constraintBottom_toTopOf="@id/et_email"/>

        <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:id="@+id/et_email"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:textSize="16sp"
            android:layout_marginStart="20sp"
            android:backgroundTint="@color/primaryColor"
            android:layout_marginBottom="30dp"
            android:maxLines="1"
            android:textColor="@color/black"
            android:fontFamily="@font/poppinsregular"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_forgotPassword"/>
        
        <Button
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:id="@+id/btn_cancel"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="10dp"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:text="@string/cancel"
            android:background="@drawable/btn_shape"
            android:fontFamily="@font/poppinsbold"
            android:layout_marginBottom="8dp"
            app:cornerRadius = "20dp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/et_email"
            app:layout_constraintBottom_toBottomOf="@id/dialogBox"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_reset"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:id="@+id/btn_reset"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="40dp"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="10dp"
            android:text="@string/reset"
            app:cornerRadius = "20dp"
            app:layout_constraintBottom_toBottomOf="@id/dialogBox"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btn_cancel"
            android:background="@drawable/btn_shape"
            android:fontFamily="@font/poppinsbold"/>














    </androidx.constraintlayout.widget.ConstraintLayout>




</androidx.constraintlayout.widget.ConstraintLayout>